[project]
name = "Naschobstkarte"
version = "0.2.0"
description = "Rendering of OSM fruit tree data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "osmtogeojson>=0.0.2",
    "requests>=2.32.5",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
